grid solution to whitespace issue

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,9 +2,6 @@ body {
   margin: 0 auto;
   padding: 0;
 }
-.tile {
-  margin: 5px;
-}
 
 .pointer {
   cursor: pointer;
