--- a/src/styles/Timers.css
+++ b/src/styles/Timers.css
@@ -1,21 +1,17 @@
-.timers {
-  max-width: 97%;
-  margin-left: auto;
-  margin-right: auto;
+.tiles {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  gap: 5px;
+  margin: 40px 2%;
 }
-.add-button-container {
-  display: block;
-  width: 140px;
-  height: 140px;
-  border: none;
-  float: left;
+.tile {   
+  border: 3px solid black;
 }
-.add-button {
-  width: 100%;
+
+.add-button { 
   text-decoration: none;
   display: block;
   text-align: center;
   font-size: 1em;
-  line-height: 140px;
-  cursor: pointer;
 }
